# voxel_renderer

./: .gitignore  Cargo.toml  index.html
art/: menu_icons.xcf
macros/: Cargo.toml
macros/src/: error.rs  lib.rs  static_buffer.rs  types.rs  util.rs  vertex_data.rs
src/: block.rs  error.rs  lib.rs  math.rs  util.rs
src/content/: chunk.rs  mod.rs  resouces.rs  world.rs
src/render/: mod.rs  pipeline.rs  shader.rs  texture.rs  vertex.rs
