[package]
name = "macros"
version = "0.1.0"
authors = ["Tin Švagelj <tin.svagelj@live.com>", "crowlkats <crowlkats@toaxl.com>"]
edition = "2021"

[lib]
proc-macro = true

[features]
default = []
mint-types = []
glam-types = []

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "1.0", features = [ "full" ] }

strum = "0.24"
strum_macros = "0.24"

fasthash = "0.4"

thiserror = "1.0"

[dev-dependencies]
wgpu = "0.14"
